--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #f2f4f7;
   --foreground: #171717;
 }
 
@@ -19,8 +19,12 @@
   }
 }
 
+* {
+  box-sizing: border-box;
+}
 body {
-  background: var(--background);
+  background: white;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
